--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,268 @@ body {
   align-items: center;
 }
 
+/* Modal Window & Overlay */
+.modal-window {
+  z-index: 10;
+  background-color: var(--white);
+  border: 1px solid var(--gray);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* margin-top: 20px; */
+  padding: 20px;
+  border-radius: 10px;
+  font-size: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-overlay {
+  z-index: 5;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(4px);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+/* Address */
+#contact-info {
+  display: flex;
+  justify-content: center;
+  margin: 0.5rem 0;
+  gap: 1rem;
+}
+
+.contact-info--divider {
+  background-color: var(--gray);
+  width: 0.1rem;
+  height: 1.5rem;
+}
+
+/* Navigation */
+#nav {
+  width: 100%;
+  background: linear-gradient(var(--dark-mid-green), var(--darker-green));
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.8rem 7rem;
+}
+
+#nav h1 {
+  color: var(--white);
+  font-family: 'Cantora One', sans-serif;
+  font-size: 2.2rem;
+}
+
+#nav h1:hover {
+  cursor: default;
+}
+
+#nav__links {
+  display: flex;
+}
+
+.nav__link {
+  list-style: none;
+}
+
+.nav__link a {
+  color: var(--white);
+  text-decoration: none;
+  font-size: 1.4rem;
+  font-weight: 500;
+  margin: 0.3rem;
+  padding: 0 0.5rem;
+}
+
+.nav__link a:hover {
+  text-decoration: underline;
+  text-underline-offset: 0.5rem;
+  text-decoration-thickness: 0.1rem;
+}
+
+.hamburger-icon {
+  display: none;
+}
+
+/* Introdcution */
+#introduction {
+  text-align: center;
+  font-style: italic;
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+/* Horizontal Divider */
+.divider--container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.divider {
+  background-color: var(--gray);
+  width: 80%;
+  height: 0.1rem;
+}
+
+/* Page Sections */
+.section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 8rem;
+  gap: 6rem;
+  height: 50rem;
+}
+
+.section img {
+  width: 50%;
+  max-width: 50rem;
+  border-radius: 1rem;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+}
+
+.section .description {
+  max-width: 50rem;
+}
+
+/* Home Section */
+#home .description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#home p {
+  color: var(--darkest-green);
+  font-size: 1.2rem;
+  font-weight: 600;
+  line-height: 1.9rem;
+}
+
+.section-title {
+  color: var(--darker-green);
+  font-family: 'Cantora One', sans-serif;
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+/* About Section */
+#about p {
+  margin-bottom: 1.2rem;
+  font-size: 1.2rem;
+}
+
+#about ul li {
+  color: var(--darkest-green);
+  line-height: 1.8rem;
+  font-size: 1.2rem;
+  margin: 1rem 0;
+}
+
+/* Section Buttons */
+.btns {
+  display: flex;
+  justify-content: space-evenly;
+  min-width: 100%;
+  margin-top: 3rem;
+}
+
+.btns button {
+  background-color: var(--mid-green);
+  color: var(--white);
+  font-size: 1.2rem;
+  border-radius: 0.6rem;
+  padding: 1.2rem;
+  border: none;
+}
+
+.btns button:hover {
+  cursor: pointer;
+  background-color: var(--dark-green);
+}
+
+.exitBtn-container {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  position: relative;
+  top: 0;
+}
+
+.exitBtn {
+  border: none;
+  width: 40px;
+  height: 40px;
+  font-size: 25px;
+  font-weight: 800;
+  border-radius: 10px;
+}
+
+.exitBtn:hover {
+  cursor: pointer;
+}
+
+/* Rules Modal */
+.rules ul {
+  margin-left: 10px;
+}
+
+/* Rates Modal */
+.rates th {
+  background-color: var(--dark-green);
+  color: white;
+}
+
+.rates td {
+  background-color: var(--mid-green);
+  color: white;
+}
+
+.rates table,
+th,
+td {
+  text-align: center;
+  padding: 5px 20px;
+}
+/* Activities Section */
+#activities ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+#activities ul li {
+  color: var(--darkest-green);
+  list-style-type: none;
+  text-align: center;
+  margin: 5px 0 5px 0;
+  font-weight: 800;
+  font-size: 20px;
+}
+
+#activities p {
+  margin-top: 20px;
+  color: var(--darkest-green);
+  font-size: 20px;
+  line-height: 30px;
+}
+
+/* Gallery */
 .slider {
   width: 800px;
   height: 500px;
@@ -44,7 +306,7 @@ body {
 
 .slide {
   width: 20%;
-  transition: 2s;
+  transition: 1s;
 }
 
 .slide img {
@@ -65,7 +327,7 @@ body {
   padding: 5px;
   border-radius: 10px;
   cursor: pointer;
-  transition: 1s;
+  transition: 0.5s;
 }
 
 .manual-btn:not(:last-child) {
@@ -96,305 +358,7 @@ body {
   position: fixed;
 }
 
-/* css for automatic navigation */
-
-.navigation-auto {
-  position: absolute;
-  display: flex;
-  width: 800px;
-  justify-content: center;
-  margin-top: 460px;
-}
-
-.navigation-auto div {
-  border: 2px solid var(--gray);
-  padding: 5px;
-  border-radius: 10px;
-  transition: 1s;
-}
-
-.navigation-auto div:not(:last-child) {
-  margin-right: 40px;
-}
-
-#radio1:checked ~ .navigation-auto .auto-btn1 {
-  background: var(--gray);
-}
-
-#radio2:checked ~ .navigation-auto .auto-btn2 {
-  background: var(--gray);
-}
-
-#radio3:checked ~ .navigation-auto .auto-btn3 {
-  background: var(--gray);
-}
-
-#radio4:checked ~ .navigation-auto .auto-btn4 {
-  background: var(--gray);
-}
-
-.modal-overlay {
-  z-index: 5;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  background: rgba(0, 0, 0, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.modal-window {
-  z-index: 10;
-  background-color: var(--white);
-  border: 1px solid var(--gray);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  /* margin-top: 20px; */
-  padding: 20px;
-  border-radius: 10px;
-  font-size: 20px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.success p {
-  margin: 0 200px 10px 200px;
-}
-
-#top-section {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
-  gap: 20px;
-}
-
-.top-section-divider {
-  background-color: var(--gray);
-  width: 2px;
-  height: 25px;
-}
-
-.body-divider-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
-
-.body-divider {
-  background-color: var(--gray);
-  width: 80%;
-  height: 2px;
-}
-
-#nav {
-  width: 100%;
-  background: linear-gradient(var(--dark-mid-green), var(--darker-green));
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 25px 110px;
-}
-
-#nav h1 {
-  color: var(--white);
-  font-family: 'Cantora One', sans-serif;
-  font-size: 40px;
-}
-
-#nav h1:hover {
-  cursor: default;
-}
-
-#nav__links {
-  display: flex;
-}
-
-.nav__link {
-  list-style: none;
-}
-
-.nav__link a {
-  color: var(--white);
-  text-decoration: none;
-  font-size: 20px;
-  font-weight: 500;
-  margin: 5px;
-  padding: 10px 5px;
-  border-radius: 10px;
-}
-
-.nav__link a:hover {
-  text-decoration: underline;
-  text-underline-offset: 8px;
-  text-decoration-thickness: 2px;
-}
-
-.hamburger-icon {
-  display: none;
-}
-
-#introduction {
-  text-align: center;
-  font-style: italic;
-  font-size: 20px;
-  margin-top: 10px;
-}
-
-.nav-section {
-  padding: 0px 100px;
-  margin: 10px;
-  border-radius: 10px;
-  display: flex;
-  gap: 50px;
-  align-items: center;
-  justify-content: center;
-  height: 800px;
-}
-
-.nav-section img {
-  width: 50%;
-  max-width: 885px;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
-}
-
-.nav-section .description {
-  max-width: 900px;
-}
-
-#home div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#home p {
-  color: var(--darkest-green);
-  font-size: 20px;
-  font-weight: 600;
-  line-height: 30px;
-}
-
-.section-title {
-  color: var(--darker-green);
-  font-family: 'Cantora One', sans-serif;
-  text-align: center;
-  font-size: 40px;
-  margin-bottom: 40px;
-}
-
-#about p {
-  font-size: 20px;
-  margin-bottom: 20px;
-}
-
-#about ul {
-  margin-top: 10px;
-  margin-left: 20px;
-  line-height: 25px;
-}
-
-#about ul li {
-  margin: 10px 0;
-  color: var(--darkest-green);
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.btns {
-  min-width: 100%;
-  margin-top: 40px;
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.btns button {
-  background-color: var(--mid-green);
-  color: var(--white);
-  font-size: 20px;
-  border-radius: 10px;
-  padding: 20px 20px;
-  border: none;
-}
-
-.btns button:hover {
-  cursor: pointer;
-  background-color: var(--dark-green);
-}
-
-.exitBtn-container {
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
-  position: relative;
-  top: 0;
-}
-
-.exitBtn {
-  border: none;
-  width: 40px;
-  height: 40px;
-  font-size: 25px;
-  font-weight: 800;
-  border-radius: 10px;
-}
-
-.exitBtn:hover {
-  cursor: pointer;
-}
-
-.rules ul {
-  margin-left: 10px;
-}
-
-.rates th {
-  background-color: var(--dark-green);
-  color: white;
-}
-
-.rates td {
-  background-color: var(--mid-green);
-  color: white;
-}
-
-.rates table,
-th,
-td {
-  text-align: center;
-  padding: 5px 20px;
-}
-
-#activities ul {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-#activities ul li {
-  color: var(--darkest-green);
-  list-style-type: none;
-  text-align: center;
-  margin: 5px 0 5px 0;
-  font-weight: 800;
-  font-size: 20px;
-}
-
-#activities p {
-  margin-top: 20px;
-  color: var(--darkest-green);
-  font-size: 20px;
-  line-height: 30px;
-}
-
+/* Services Section */
 #services p {
   margin-top: 15px;
   color: var(--darkest-green);
@@ -402,6 +366,7 @@ td {
   line-height: 30px;
 }
 
+/* Contact-Us Section */
 #contact-us {
   display: flex;
   flex-direction: column;
@@ -464,6 +429,7 @@ td {
   background-color: var(--dark-green);
 }
 
+/* Footer Section */
 #footer {
   background-color: var(--gray);
   width: 100%;
@@ -486,13 +452,13 @@ td {
 /* ----------------------------------- */
 
 @media screen and (max-width: 1366px) {
-  #top-section {
+  #contact-info {
     flex-direction: column;
     align-items: center;
     gap: 5px;
   }
 
-  .top-section-divider {
+  .contact-info--divider {
     width: 200px;
     height: 2px;
   }
@@ -565,7 +531,7 @@ td {
     margin: 5px;
   }
 
-  .nav-section {
+  .section {
     flex-direction: column;
     height: 100%;
     padding: 20px 100px;
@@ -574,11 +540,11 @@ td {
     padding: 20px 0;
   }
 
-  .nav-section img {
+  .section img {
     width: 80%;
   }
 
-  .nav-section div {
+  .section div {
     width: 80%;
   }
 
@@ -636,7 +602,7 @@ td {
     text-align: center;
   }
 
-  .nav-section img {
+  .section img {
     width: 100%;
     border-radius: 0px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
