--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,11 @@ body {
   align-items: center;
 }
 
+.map {
+  width: 100%;
+  height: 400px;
+  background-color: grey;
+}
 /* Modal Window & Overlay */
 .modal {
   z-index: 10;
@@ -219,21 +224,15 @@ body {
   display: flex;
   justify-content: flex-end;
   width: 100%;
-  position: relative;
-  top: 0;
 }
 
 .exitBtn {
-  border: none;
-  width: 40px;
-  height: 40px;
-  font-size: 25px;
-  font-weight: 800;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .exitBtn:hover {
   cursor: pointer;
+  background-color: var(--gray);
 }
 
 /* Rules Modal */
@@ -282,16 +281,14 @@ td {
 
 /* Calendar */
 .calendar-body {
-  width: 40rem;
+  width: 50rem;
   display: flex;
   align-items: center;
-  padding: 0 10px;
   justify-content: center;
-  min-height: 30rem;
 }
 
 .wrapper {
-  width: 450px;
+  width: 100%;
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 15px 40px rgba(0, 0, 0, 0.12);
