--- a/styles.css
+++ b/styles.css
@@ -115,13 +115,13 @@ body {
   font-size: 1.4rem;
   font-weight: 500;
   margin: 0.3rem;
-  padding: 0 0.5rem;
+  padding: 0.5rem;
+  border-radius: 10px;
+  border: 3px solid transparent;
 }
 
 .nav__item a:hover {
-  text-decoration: underline;
-  text-underline-offset: 0.5rem;
-  text-decoration-thickness: 0.1rem;
+  border: 3px solid var(--white);
 }
 
 .hamburger-icon {
@@ -376,6 +376,7 @@ header .current-date {
 }
 
 /* Gallery */
+
 .slider {
   width: 800px;
   height: 500px;
